fix some styles on smaller screeners

--- a/ui/src/scss/base/buttons.scss
+++ b/ui/src/scss/base/buttons.scss
@@ -4,6 +4,10 @@
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.25rem;
+
+  @media (max-width: 575px) {
+    font-size: 0.8rem;
+  }
 }
 
 .btn-floating {
